@@ -1,3 +1,7 @@
+2008-02-08  Valentin Hilbig  <tino@firebird.03.softkill.net>
+
+	* md5chk.c (main): getopt help options sorted
+
 2008-02-07  Valentin Hilbig  <tino@firebird.03.softkill.net>
 
 	* md5chk.c (md5): Option -z added and updated to current lib
